2001-08-06  Max Horn <max@quendi.de>
	* Stats_gump.cc fixed bug where you could drag items from the gump
	* actors.cc: fixed pick pocketing bug (pick pocket could be triggered by usecode events)

2001-08-06  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Fixed stairway crash (world-wrapping problem).

2001-08-05  Max Horn <max@quendi.de>
	* audio/midi_drivers: changed Makefile.am
	* audio/midi_drivers/forked_player.cc:  removed the unuses "../.." stuff
	* usecode/ucinternal.h: added "class Barge_object;"
	* exult.h: added some "class XYZ;"

2001-08-05  Max Horn <max@quendi.de>
	* audio/Audio.cc, cheat.cc: properly uses Game::get_gametitle() now
	* game.cc: tweaked source a bit
	* exult_constants.h: changed #if DEBUG to #ifdef DEBUG to match rest of exult
	* mac: ExultHeaders.pch fixed

2001-08-05  Max Horn <max@quendi.de>
	* keys.cc, gumps/Gamemenu.cc: added forgotten #include "exult.h"

2001-08-05  Max Horn <max@quendi.de>
	* shapes/bodies.cc/h: moved Is_body from gamewin.cc to here
	* bggame.cc: added missing prototypes (making compiler happy)
	* exult.h: added, allowed to remove "extern ..." in many files
	* various files: updated legal headers; removed extern's; and other clean up

2001-08-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: compiles on Linux again

2001-08-05  Max Horn <max@quendi.de>
	* files/utils.cc/.h: added missing prototypes
	* conf/XMLEntity.c/.h: removed class XMLEntity; added XMLNode methods dump, xmlassign and xmlparse
	* conf/xmldump.cc, conf/xmlparse.cc: removed
	* conf/Configuration.cc: make use of new XMLNode methods dump/xmlassign/xmlparse
	* exult_constants.h: added c_empty_string constant
	* desktop/exult.png: new picture
	* mac/*: updated/added various mac specific files
	* various files: updated legal headers

2001-08-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: fixed serpent ring/ring naming problem